Resolves tdf#163537 && tdf#131253 - Make Boundaries independent from NPC

Sections and Objects are now toggled on/off independently from Text Boundaries. Both, single and multi-column sections receive a frame (multi-column in addition one for text boundaries).

Partially resolves 5bf7df62645f73ad69772f318ea3058dfd6fce12ommit.

Change-Id: I6d43f936c3d2e1c454fdc39f1bbbb2c6f7bef3e7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175832
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>